SLING-7134 - Script execution order is not deterministic on Java 9
* reimplemented the former o.a.s.scripting.core.impl.ScriptEngineManagerFactory,
o.a.s.scripting.core.impl.helper.SlingScriptEngineManager and
o.a.s.scripting.core.impl.helper.ProxyScriptEngineManager into one service:
o.a.s.scripting.core.impl.jsr223.SlingScriptEngineManager
* the new SlingScriptEngineManager manages ScriptEngineFactories registrations
from the platform's ScriptEngineManager, bundles that expose a ScriptEngineFactory
through the SPI mechanism and ScriptEngineFactories registered as OSGi services
* introduced the concept of a SortableScriptEngineFactory, that allows ordering the
factories based on bundle IDs and service rankings; if two factories have the same service
ranking, then the factory with the higher bundle ID will win
* corrected bug in the ScriptCacheImpl to cache scripts from all ScriptEngineFactories that
register a Compilable ScriptEngine, not just for the ScriptEngineFactories registered as
OSGi services
* extended tests
* updated PAX exam tests to run on Java 9